--- a/images/some.css
+++ b/images/some.css
@@ -126,8 +126,7 @@ div.tab2 button.active {
         
          div#section5 {
           background-color: LightGreen;
-           background-image: url("back6.jpg");
-           width:  90.7%
+           background-image: url("back6.jpg")
         }
 
         div#section6 {
